style: switch to Space Grotesk font

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,7 +22,7 @@ const {
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <title>{title}</title>
   </head>
@@ -39,7 +39,7 @@ const {
 
 <style is:global>
   :root {
-    --font-sans: 'Inter', system-ui, sans-serif;
+    --font-sans: 'Space Grotesk', system-ui, sans-serif;
   }
   body {
     font-family: var(--font-sans);
