--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -48,9 +48,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site || "https://mrpack.n
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="min-h-screen bg-background font-sans antialiased text-foreground selection:bg-primary selection:text-primary-foreground overflow-x-hidden">
-    <div class="fixed inset-0 -z-10 h-full w-full bg-background">
-      <div class="absolute h-full w-full bg-[radial-gradient(#27272a_1px,transparent_1px)] [background-size:16px_16px] [mask-image:radial-gradient(ellipse_50%_50%_at_50%_50%,#000_70%,transparent_100%)] opacity-20"></div>
-    </div>
+    <div class="fixed inset-0 -z-10 h-full w-full bg-background pointer-events-none"></div>
     
     <div class="relative flex min-h-screen flex-col">
       <main class="flex-1 flex flex-col">
